comments style.css added

--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
       И здесь помогают правила организации отступов. Они позволяют легко менять, улучшать
       и масштабировать вёрстку и уберегут вас от типичных ошибок.
     </p>
-    <div class="gray-box">
+    <div class="gray-box background__image-decorate-1">
       <h2 class="title">Содержание</h2>
       <p class="text">
         Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь любой сайт вы начинаете
@@ -48,7 +48,7 @@
           В вёрстке этот поток идёт сверху вниз, слева направо. Именно поэтому, если какой-то элемент на
           макете находится справа, он должен в HTML-коде идти последним из своей группы.
         </p>
-        <p class="text">
+        <p class="text__blue-box">
           Исходя из этого, можно сразу сформулировать первый принцип.
         </p>
     </div>
@@ -123,7 +123,7 @@
           и описанием, достаточно просто сделать отступ снизу — для заголовка.
         </p>
     </div>
-    <div class="gray-box">
+    <div class="gray-box background__image-decorate-2">
       <h2 class="title">Итог</h2>
         <p class="text">
           Это основные правила организации отступов, которые помогут вам сделать вёрстку качественной и гибкой.
