css for article done

--- a/article.html
+++ b/article.html
@@ -60,7 +60,7 @@
         </p>
         <figure class="image__content">
           <img src="img/1.jpg" alt="как правильно задавать отступы">
-          <figcaption>На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)</figcaption>
+          <figcaption class="img__figcaption">На скриншоте видно, как правильно задавать отступы, — только справа и снизу (показано оранжевым)</figcaption>
         </figure>
         <p class="text">
           Внешние отступы сверху и слева <strong>(margin-top и margin-left)</strong> заменяются на аналогичные
@@ -84,7 +84,7 @@
         </p>
         <figure class="image__content">
           <img src="img/4.jpg" alt="как правильно задавать отступы в списках">
-          <figcaption>
+          <figcaption class="img__figcaption">
             На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает размер «родителя» с голубым фоном,
             образуя лишний отступ — типичную ошибку вёрстки.
           </figcaption>
